--- a/styles/base.css
+++ b/styles/base.css
@@ -3,7 +3,7 @@
     background-size: cover;
     object-position: center;
     object-fit: cover;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     text-align: center;
     -webkit-transition: all .2s;
     -moz-transition: all .2s;
@@ -12,48 +12,54 @@
     transition: all .22s;
 }
 
-
-
-
 @-webkit-keyframes flip-horizontal-top {
     0% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
     }
+
     10% {
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
     }
+
     50% {
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
     }
+
     60% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
     }
+
     100% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
     }
 }
+
 @keyframes flip-horizontal-top {
     0% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
     }
+
     10% {
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
     }
+
     50% {
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
     }
+
     60% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
     }
+
     100% {
         -webkit-transform: rotateX(0);
         transform: rotateX(0);
@@ -73,7 +79,6 @@
 
 body {
     color: #efbd4c;
-    width: 100vw;
     background-color: #23252a;
 }
 
@@ -108,17 +113,17 @@ body {
     height: 330px;
     width: 330px;
     margin: 0 auto 30px;
-    -webkit-box-shadow:  10px 10px 0 #efbd4c;
-    -moz-box-shadow:  10px 10px 0 #efbd4c;
-    box-shadow:  10px 10px 0 #efbd4c;
+    -webkit-box-shadow: 10px 10px 0 #efbd4c;
+    -moz-box-shadow: 10px 10px 0 #efbd4c;
+    box-shadow: 10px 10px 0 #efbd4c;
     cursor: pointer;
 }
 
 #pic:hover {
     background-color: #efbd4c;
-    -webkit-box-shadow:  10px 10px 0 #db6350;
-    -moz-box-shadow:  10px 10px 0 #db6350;
-    box-shadow:  10px 10px 0 #db6350;
+    -webkit-box-shadow: 10px 10px 0 #db6350;
+    -moz-box-shadow: 10px 10px 0 #db6350;
+    box-shadow: 10px 10px 0 #db6350;
 }
 
 #file-input {
